src/objects/Dues_Summary__c.object
<CustomObject>
    <description>the object is used to store due summary records and the failed records</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <description>the field is used to store billing month</description>
        <label>Billing Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dues Summary</relationshipLabel>
        <relationshipName>Dues_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>field is used to store due summary record for dues created</description>
        <label>Dues Summary</label>
        <referenceTo>Dues_Summary__c</referenceTo>
        <relationshipLabel>Dues/Taxes</relationshipLabel>
        <relationshipName>Dues_Summary1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipLabel>Dues Summary</relationshipLabel>
        <relationshipName>Dues_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Dues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Dues</label>
        <referenceTo>Member_Dues__c</referenceTo>
        <relationshipLabel>Dues Summary</relationshipLabel>
        <relationshipName>Dues_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>the field is used to store the due date</description>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Name__c</fullName>
        <label>Service Charge Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <label>Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Applied_On_Service_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Applied On Service Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <description>stores the name of the tax</description>
        <label>Tax Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c  + Service_Charge__c  +  Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Dues Summary</label>
    <nameField>
        <displayFormat>DUESUM-{0000000}</displayFormat>
        <label>Dues Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dues Summary</pluralLabel>
    <recordTypes>
        <fullName>Due_Summary</fullName>
        <active>true</active>
        <description>Recordtype is used to store due summaries</description>
        <label>Due Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dues</fullName>
        <active>true</active>
        <description>generated dues</description>
        <label>Dues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxes</fullName>
        <active>true</active>
        <description>to store taxes for dues</description>
        <label>Taxes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckBillingMonth</fullName>
        <active>true</active>
        <description>should allow only month names in billing month field</description>
        <errorConditionFormula>NOT(OR( ISBLANK(Billing_Period__c  ), Billing_Period__c  ==&apos;January&apos;,Billing_Period__c  =&apos;February&apos;,Billing_Period__c  =&apos;March&apos;,Billing_Period__c  =&apos;April&apos;,Billing_Period__c  =&apos;May&apos;,Billing_Period__c  =&apos;June&apos;,Billing_Period__c  =&apos;July&apos;,Billing_Period__c  =&apos;August&apos;,Billing_Period__c  =&apos;September&apos;,Billing_Period__c  =&apos;October&apos;,Billing_Period__c  =&apos;November&apos;,Billing_Period__c  =&apos;December&apos;))</errorConditionFormula>
        <errorDisplayField>Billing_Period__c</errorDisplayField>
        <errorMessage>Month name is not valid</errorMessage>
    </validationRules>
</CustomObject>